# 2nd_semester_python

./: README.md
ICS0015/: Python_Assignment_1.py  Python_Fundamentals_1.py  Python_Fundamentals_2.py  Python_Fundamentals_3.py  python_Fundamentals_4.py
ICS0015/Python_A_2/: Python_A_2.py  hunzjj.xlsx  oxplqs.xlsx  xmssak.xlsx
ICS0015/Python_Fund_5/: Python_Fundamentals_5.py
ICS0015/Python_Fund_6/: Python_Fundamentals_6.py  pricelist.xlsx
ICS0019/HW1/circlinator_upload/tests/: test_circlinator.py
ICS0019/Homework_1/: link.txt
ICS0019/Homework_1/Homework_1/: main.py
ICS0019/Homework_1/circlinator_upload/: LICENSE  README.md  setup.cfg
ICS0019/Homework_1/circlinator_upload/src/circle_dachi_mshvidobadze.egg-info/: PKG-INFO  SOURCES.txt
ICS0019/Homework_2/: Homework_2.py
ICS0019/Homework_2/Database_code/: SQLAlchemy1Create.py  SQLAlchemy2Sample.py  SQLAlchemy3Select.py  SQLAlchemy4Connect.py  SQLAlchemy5Query.py  SQLAlchemy6Update.py  SQLAlchemy7Filter.py  SQLAlchemy8Relationship.py  SQLAlchemy9RelatedObjects.py  college.db  dbSQL.py  dbconnect.py  sales.db
ICS0019/Homework_3/: Homework_3.py
ICS0019/Homework_4/: Homework_4.py  osta_pcs.json
ICS0026/: Crypto_1.py  Crypto_2.py  Crypto_3.py  Crypto_4.py  Crypto_5.py  Crypto_6.py
ICS0026/Crypto_A_1/: Crypto_Assignment_1.py
