[metadata]
# replace with your username:
name = circle-dachi-mshvidobadze
version = 0.0.1
author = Dachi Mshvidobadze
author_email = damshv@ttu.ee
description = Circlinates circles - calculates circumference and area
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src